Fix scrollbar, Fix

--- a/packages/theme-bonyfish/src/scrollbar.css
+++ b/packages/theme-bonyfish/src/scrollbar.css
@@ -16,7 +16,7 @@
     }
 
     @e wrap {
-      overflow: scroll;
+      overflow: auto;
 
       @m hidden-default {
         &::-webkit-scrollbar {
